# geojson-pydantic

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml  release.yml
contributing/: index.html
docs/: mkdocs.yml
docs/src/: intro.md  usage.md
docs/src/migrations/: v1.0_migration.md
geojson_pydantic/: __init__.py  base.py  factory.py  features.py  geo_interface.py  geometries.py  types.py  utils.py
geojson_pydantic/strategies/: __init__.py  bbox.py  features.py  geometries.py  helpers.py
intro/: index.html
migrations/v1.0_migration/: index.html
release-notes/: index.html
search/: search_index.json
test/: test_factory.py  test_features.py  test_geometries.py  test_package.py
tests/: geometry_strategies.py  test_base.py  test_features.py  test_geometries.py  test_package.py  test_types.py
