[bumpversion]
current_version = 0.3.3
commit = True
tag = True
tag_name = {new_version}

[metadata]
version = attr: geojson_pydantic.version

[bumpversion:file:geojson_pydantic/__init__.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[isort]
profile = black
known_first_party = geojson_pydantic
known_third_party = geojson, pydantic
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
