[bumpversion]
current_version = 0.3.4
commit = True
tag = True
tag_name = {new_version}

[metadata]
name = geojson-pydantic
version = attr: geojson_pydantic.version
url = https://github.com/developmentseed/geojson-pydantic
author = Drew Bollinger
author_email = drew@developmentseed.org
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: GIS
license = MIT
description= Pydantic data models for the GeoJSON spec
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geojson pydantic

[options]
install_requires =
    pydantic
python_requires = >=3.7
packages = find:

[options.package_data]
geojson_pydantic = *.typed

[options.extras_require]
test = pytest; pytest-cov
dev = pre-commit

[options.packages.find]
exclude =
    tests

[bumpversion:file:geojson_pydantic/__init__.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[isort]
profile = black
known_first_party = geojson_pydantic
known_third_party = geojson, pydantic
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
